Package_Tools/include-C/fwupd-1/libfwupd/fertig/fwupd_client.pp


function fwupd_client_new:PFwupdClient;cdecl;external;
function fwupd_client_get_main_context(self:PFwupdClient):PGMainContext;cdecl;external;
procedure fwupd_client_set_main_context(self:PFwupdClient; main_ctx:PGMainContext);cdecl;external;
procedure fwupd_client_connect_async(self:PFwupdClient; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_connect_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
function fwupd_client_disconnect(self:PFwupdClient; error:PPGError):Tgboolean;cdecl;external;
procedure fwupd_client_quit_async(self:PFwupdClient; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_quit_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
procedure fwupd_client_get_devices_async(self:PFwupdClient; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_devices_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGPtrArray;cdecl;external;
procedure fwupd_client_get_plugins_async(self:PFwupdClient; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_plugins_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGPtrArray;cdecl;external;
procedure fwupd_client_get_history_async(self:PFwupdClient; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_history_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGPtrArray;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_get_releases_async(self:PFwupdClient; device_id:Pgchar; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_releases_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGPtrArray;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_get_downgrades_async(self:PFwupdClient; device_id:Pgchar; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_downgrades_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGPtrArray;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_get_upgrades_async(self:PFwupdClient; device_id:Pgchar; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_upgrades_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGPtrArray;cdecl;external;
procedure fwupd_client_get_details_bytes_async(self:PFwupdClient; bytes:PGBytes; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_details_bytes_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGPtrArray;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_verify_async(self:PFwupdClient; device_id:Pgchar; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_verify_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_verify_update_async(self:PFwupdClient; device_id:Pgchar; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_verify_update_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_unlock_async(self:PFwupdClient; device_id:Pgchar; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_unlock_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure fwupd_client_modify_config_async(self:PFwupdClient; key:Pgchar; value:Pgchar; cancellable:PGCancellable; callback:TGAsyncReadyCallback; 
            callback_data:Tgpointer);cdecl;external;
function fwupd_client_modify_config_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_activate_async(self:PFwupdClient; device_id:Pgchar; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_activate_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_clear_results_async(self:PFwupdClient; device_id:Pgchar; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_clear_results_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_get_results_async(self:PFwupdClient; device_id:Pgchar; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_results_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PFwupdDevice;cdecl;external;
procedure fwupd_client_modify_bios_setting_async(self:PFwupdClient; settings:PGHashTable; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_modify_bios_setting_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
procedure fwupd_client_get_bios_settings_async(self:PFwupdClient; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_bios_settings_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGPtrArray;cdecl;external;
procedure fwupd_client_get_host_security_attrs_async(self:PFwupdClient; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_host_security_attrs_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGPtrArray;cdecl;external;
procedure fwupd_client_get_host_security_events_async(self:PFwupdClient; limit:Tguint; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_host_security_events_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGPtrArray;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_get_device_by_id_async(self:PFwupdClient; device_id:Pgchar; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_device_by_id_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PFwupdDevice;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_get_devices_by_guid_async(self:PFwupdClient; guid:Pgchar; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_devices_by_guid_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGPtrArray;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure fwupd_client_install_async(self:PFwupdClient; device_id:Pgchar; filename:Pgchar; install_flags:TFwupdInstallFlags; cancellable:PGCancellable; 
            callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_install_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_install_bytes_async(self:PFwupdClient; device_id:Pgchar; bytes:PGBytes; install_flags:TFwupdInstallFlags; cancellable:PGCancellable; 
            callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_install_bytes_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
{xxxxxxxxG_DEPRECATED_FOR(fwupd_client_install_release2_async) }
procedure fwupd_client_install_release_async(self:PFwupdClient; device:PFwupdDevice; release:PFwupdRelease; install_flags:TFwupdInstallFlags; cancellable:PGCancellable; 
            callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
procedure fwupd_client_install_release2_async(self:PFwupdClient; device:PFwupdDevice; release:PFwupdRelease; install_flags:TFwupdInstallFlags; download_flags:TFwupdClientDownloadFlags; 
            cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_install_release_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_update_metadata_bytes_async(self:PFwupdClient; remote_id:Pgchar; metadata:PGBytes; signature:PGBytes; cancellable:PGCancellable; 
            callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_update_metadata_bytes_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
{///G_DEPRECATED_FOR(fwupd_client_refresh_remote2_async) }
procedure fwupd_client_refresh_remote_async(self:PFwupdClient; remote:PFwupdRemote; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
procedure fwupd_client_refresh_remote2_async(self:PFwupdClient; remote:PFwupdRemote; download_flags:TFwupdClientDownloadFlags; cancellable:PGCancellable; callback:TGAsyncReadyCallback; 
            callback_data:Tgpointer);cdecl;external;
function fwupd_client_refresh_remote_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure fwupd_client_modify_remote_async(self:PFwupdClient; remote_id:Pgchar; key:Pgchar; value:Pgchar; cancellable:PGCancellable; 
            callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_modify_remote_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure fwupd_client_modify_device_async(self:PFwupdClient; device_id:Pgchar; key:Pgchar; value:Pgchar; cancellable:PGCancellable; 
            callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_modify_device_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
procedure fwupd_client_get_report_metadata_async(self:PFwupdClient; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_report_metadata_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGHashTable;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_inhibit_async(self:PFwupdClient; reason:Pgchar; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_inhibit_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Pgchar;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_uninhibit_async(self:PFwupdClient; inhibit_id:Pgchar; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_uninhibit_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
procedure fwupd_client_emulation_load_async(self:PFwupdClient; data:PGBytes; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_emulation_load_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
